<resources>
    <string name="app_name">PaymentGateways</string>
    <string name="full_name">Full Name</string>
    <string name="full_email">Email Address</string>
    <string name="customer_details">Customer Details</string>
    <string name="pay_now">PAY NOW</string>
    <string name="card_details">Card Details</string>
    <string name="payment_desc">Description</string>
    <string name="ok_thanks">OK, Thanks</string>
    <string name="supported_payments">Supported payments</string>
    <string name="mobile_details">Mobile Details</string>
    <string name="phone_number">Phone Number</string>
    <string name="success_swahili">Muamala umefanikiwa</string>
    <string name="failure_blocked_swa">Haujaruhusiwa</string>
    <string name="failure_blocked_eng">Has not been</string>
    <string name="success_english">Transaction processed successfully</string>
    <string name="failure_swahili">Muamala Haujaruhusiwa</string>
    <string name="failure_expired">Muamala wako umekwisha muda wake</string>
    <string name="failure_swahili_not_available">Huduma ya malipo haipatikani</string>
    <string name="failure_swahili_no_account">Akaunti yako ya tigo Pesa haipo</string>
    <string name="failure_no_enough_funds">Huna salio la kutosha</string>
    <string name="session_termination_message">Your session will be terminated shortly</string>
    <string name="negative_button">Dismiss</string>
    <string name="positive_button">Continue</string>
    <string name="cancel_task_message">You are about to cancel this payment process, you are reminded not to cancel it.Would you like to proceed?</string>
    <string name="failure_networks"><![CDATA[<head><head></head><body></body></head>]]></string>
    <string name="ok_message">OK</string>
    <string name="cancel_task_title">Task Cancellation</string>
    <string name="payment_message_failed">Payment failed, try again later</string>
    <string name="payment_message_completed">We have processed your payment.</string>
    <string name="payment_message_processing">Processing your payment, wait…</string>
    <string name="empty_card_details">Card details are empty, fill them out</string>
    <string name="card_validated">Credit card validated successfully</string>
    <string name="card_validation_failed">Credit card validation failed</string>
    <string name="card_validation">Validating credit card details…</string>
    <string name="authentication_message">Authenticating payment, please wait…</string>
    <string name="unsupported_paymeny_method">We currently don\'t support your mobile operator</string>
    <string name="empty_mobile_details">Fill out your mobile number first</string>
    <string name="token_acquisition_failed">Access token acquisition process failed</string>
    <string name="something_went_wrong">Something went wrong, try again or contact us</string>
</resources>
